# MockProjectTemplate

./: CMakeLists.txt
include/my_project/: Timer.hpp  keyboard.hpp  lcd.hpp  manager.hpp  memory.hpp  remote_sensor.hpp  sensor_receiver.hpp  sensor_zone.hpp  speaker.hpp  ux.hpp
src/: Timer.cpp  keyboard.cpp  lcd.cpp  manager.cpp  memory.cpp  sensor_receiver.cpp  sensor_zone.cpp  ux.cpp
test/: CMakeLists.txt  manager_tests.cpp  memory_tests.cpp  sensor_receiver_tests.cpp  sensor_zone_tests.cpp  test_cases.cpp  ux_tests.cpp
test/utils/: ActionQueue.hpp
